[BRMO-246] verwijder bericht verwerking (#1641)